Cleaned up WikiUtils a bit more.
First, WIKI_BASE_URL and WIKI_API_URL are now final.  Makes more sense.

Second, now there's a getWikiApiUrl() call, with obvious results.

Third, data requests now ALL request XML as the format, as opposed to just
guessing it'll do that by default.

Fourth, made a few minor fixes involving the Double class.